--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Header */
 .header {
     display: flex;
@@ -20,6 +24,20 @@
     font-size: 20px;
 }
 
+.login-btn {
+    border: none;
+    color: black;
+    background-color: white;
+    margin-right: 10px;
+    padding: 0px 5px;
+    cursor: pointer;
+    border-radius: 1px;
+}
+
+.login-btn:hover {
+    background-color: wheat;
+}
+
 /* Body */
 
 /* Search */
@@ -28,11 +46,14 @@
     padding: 10px;
 }
 
+.filters {
+    display: flex;
+}
+
 /* Res-container */
 .res-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 /* Res-card */
@@ -44,7 +65,7 @@
     box-shadow: 1px;
     background-color: #f0f0f0;
     padding: 5px;
-    margin: 5px 10px;
+    margin: 5px 18px;
 }
 
 .res-card:hover {
@@ -52,7 +73,7 @@
     cursor: pointer;
 }
 
-.res-card > img {
+.res-card > a> img {
     height: 150px;
     width: 100%;
 }
@@ -60,4 +81,18 @@
 .filter-btn {
     margin: 10px 0;
     padding: 2px 4px;
+}
+
+/* Shimmer */
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.shimmer-container > .shimmer-card {
+    height: 400px;
+    width: 200px;
+    background-color: #f0f0f0;
+    padding: 5px;
+    margin: 5px 10px;
 }
